@@ -50,6 +50,8 @@ PHP                                                                        NEWS
   allowed in ASCII mode). (Ilia, crrodriguez at suse dot de)
 - Fixed bug #43493 (pdo_pgsql does not send username on connect when password
   is not available). (Ilia)
+- Fixed bug #43491 (Under certain conditions, file_exists() never returns).
+  (Dmitry)
 - Fixed bug #43482 (array_pad() does not warn on very small pad numbers).
   (Ilia)
 - Fixed bug #43457 (Prepared statement with incorrect parms doesn't throw 
